# serveza

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: build_and_test.yml
.zed/: tasks.json
examples/: CMakeLists.txt
examples/http_echo/: CMakeLists.txt
examples/http_echo/src/: main.cpp
examples/https_echo/: CMakeLists.txt
examples/https_echo/src/: main.cpp
examples/local_echo/: CMakeLists.txt
examples/local_echo/src/: main.cpp
examples/tcp_echo/: CMakeLists.txt
examples/tcp_echo/src/: main.cpp
examples/tls_echo/: CMakeLists.txt
examples/tls_echo/src/: config.h.in  main.cpp
examples/udp_time/: CMakeLists.txt
examples/udp_time/src/: main.cpp
include/serveza/: serveza.hpp
support/: CMakeLists.txt
support/include/serveza/: tls_cert_utils.h
support/src/: tls_cert_utils.cpp
tests/: CMakeLists.txt
tests/src/: BaseTest.h  main.cpp  test_Listener.cpp  test_LocalDatagramSession.cpp  test_LocalStreamSession.cpp  test_TcpSession.cpp  test_UdpSession.cpp
